--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Twilio credentials
 TWILIO_ACCOUNT_SID = 'AC7abe4b38898c62f4479919dbb0844963'
-TWILIO_AUTH_TOKEN = '47cf3055e834e4afc2501aaea73beb4c'
+TWILIO_AUTH_TOKEN = '0b9dd3499d06894662e676566ac77b9c'
 TWILIO_PHONE_NUMBER = '+19404779873'  # your Twilio phone number
 
-# Payment Credentials
-RAZORPAY_KEY_ID = 'rzp_test_SoAXhky8w3WVw0'
-RAZORPAY_KEY_SECRET = '5MMtcvDYVhPiAXrOwgufZ4XF'
+# Payment live mode Credentials
+RAZORPAY_KEY_ID = 'rzp_live_VhRVb8XBU84pp1'
+RAZORPAY_KEY_SECRET = 'ybwsSV1tqIXRoxwg4zlXKrsO'
 
 # Admin Email configuration
 EMAIL_HOST_USER=hifix.services13@gmail.com
